# rsx-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  asv.conf.json  dist-workspace.toml  lychee.toml  pixi.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci_benchmark.yml  ci_docs.yml  pypi.yml
api/rust/rsx_core/: bitset.rst  c_api.rst  commands.rst  io.rst  kmer.rst  lib.rst  marker.rst  markers_table.rst  popmap.rst  stats.rst  status.rst  test_method.rst
assets/branding/: README.md
benchmarks/: analyze_bayesian_evidence.py  analyze_bayesian_sensitivity.py  analyze_literature_modes.py  bench_marker_source.py  bench_radsex.py  bench_rsx.py  build_radsex_cpp.sh  check_benchmark_docs.py  check_literature_manifest.py  collect_lowdepth_sweep.py  compare_literature_radsex.py  generate_data.py  literature_datasets.tsv  merge_literature_results.py  plot_benchmarks.py  plot_literature_benchmarks.py  plot_prior_sensitivity_heatmap.py  run_benchmarks.sh  run_literature_benchmarks.py  run_literature_bindings.py  simulate_ground_truth.py  summarise_depth_stability.py  summarize_literature_unlocks.py  test_literature_analysis.py  test_literature_benchmarks.py  test_literature_bindings.py  test_literature_manifest.py  test_literature_modes.py  test_literature_sweeps.py  test_literature_unlocks.py
benchmarks/data/large/: cpp_signif.tsv  cpp_subset.tsv  genome.fa  popmap.tsv  rust_depth.tsv  rust_distrib.tsv  rust_freq.tsv  rust_signif.tsv  rust_subset.tsv
benchmarks/data/medium/: cpp_depth.tsv  cpp_map.tsv  cpp_process.tsv  cpp_subset.tsv  genome.fa.amb  genome.fa.ann  genome.fa.bwt  genome.fa.pac  genome.fa.sa  markers.tsv  popmap.tsv  rust_depth.tsv  rust_distrib.tsv  rust_freq.tsv  rust_map.tsv  rust_process.tsv  rust_signif.tsv  rust_subset.tsv
benchmarks/data/small/: cpp_distrib.tsv  cpp_map.tsv  cpp_process.tsv  cpp_signif.tsv  cpp_subset.tsv  genome.fa  genome.fa.amb  genome.fa.ann  genome.fa.bwt  genome.fa.pac  genome.fa.sa  markers.tsv  popmap_10.tsv  rust_depth.tsv  rust_distrib.tsv  rust_freq.tsv  rust_map.tsv  rust_process.tsv  rust_signif.tsv  (+1 more)
benchmarks/results/: benchmark_results.csv  literature_bayesian_evidence.csv  literature_benchmark_results.csv  literature_binding_results.csv  literature_binding_results_danio_albolineatus.csv  literature_binding_results_notothenia_rossii.csv  literature_binding_results_plecoglossus_altivelis.csv  literature_binding_results_tinca_tinca.csv  literature_bio_unlocks.csv  literature_candidate_triage.csv  literature_depth_stability.csv  literature_mode_effects.csv  literature_mode_effects_sweep.csv  literature_sex_system_inference.csv  literature_speed_comparison.csv  lowdepth_danio_albolineatus_d10.csv  lowdepth_danio_albolineatus_d3.csv  lowdepth_danio_albolineatus_d5.csv  lowdepth_danio_albolineatus_d8.csv  lowdepth_notothenia_rossii_d10.csv  lowdepth_notothenia_rossii_d3.csv  lowdepth_notothenia_rossii_d5.csv  lowdepth_notothenia_rossii_d8.csv  lowdepth_plecoglossus_altivelis_d10.csv  lowdepth_plecoglossus_altivelis_d3.csv  lowdepth_plecoglossus_altivelis_d5.csv  lowdepth_plecoglossus_altivelis_d8.csv  lowdepth_tinca_tinca_d10.csv  lowdepth_tinca_tinca_d3.csv  lowdepth_tinca_tinca_d5.csv  lowdepth_tinca_tinca_d8.csv  marker_source_paths.csv  prior_sensitivity.csv  prior_sensitivity_from_triage.csv
benchmarks/slurm/: literature_bindings_features.sbatch  literature_biology_low_depth.sbatch  literature_biology_prior_sensitivity.sbatch  literature_prepare_dataset.sbatch  literature_radsex_compare.sbatch  radsex_cpp_build.sbatch  rsx_release_build.sbatch
docs/: export.el
docs/figures/: literature_benchmark_summary.tsv  literature_speedup_pairs.tsv  literature_speedup_summary.tsv
docs/orgmode/: changelog.org  code_of_conduct.org  index.org  used_by.org
docs/source/: Doxyfile_rsx.cfg  conf.py
examples/minimal/: README.md  run_demo.sh
radsex-cli/: Cargo.toml
radsex-cli/src/: main.rs
radsex-core/: Cargo.toml  build.rs  cbindgen.toml
radsex-core/benches/: bench_stats.rs
radsex-core/src/: bitset.rs  kmer.rs  lib.rs  marker.rs  markers_table.rs  popmap.rs  stats.rs  status.rs  test_method.rs
radsex-core/src/c_api/: commands.rs  mod.rs  types.rs
radsex-core/src/commands/: depth.rs  distrib.rs  freq.rs  map.rs  merge.rs  mod.rs  process.rs  process_mpi.rs  signif.rs  subset.rs  triage.rs
radsex-core/src/io/: mod.rs  seq_reader.rs  table_io.rs
radsex-core/src/source/: arrow_source.rs  estimator.rs  mod.rs  parquet_source.rs
radsex-core/tests/: test_pipeline.rs  test_precision.rs
repro/: benchmarks.org  literature_benchmarks.org
repro/benchmarks/: package_for_figshare.sh  test_package_for_figshare.sh
rsx-cli/: Cargo.toml
rsx-cli/src/: main.rs
rsx-core/: Cargo.toml  cbindgen.toml
rsx-core/benches/: bench_stats.rs
rsx-core/src/: bitset.rs  kmer.rs  lib.rs  marker.rs  markers_table.rs  popmap.rs  stats.rs  status.rs  test_method.rs
rsx-core/src/c_api/: commands.rs  mod.rs  types.rs
rsx-core/src/commands/: depth.rs  distrib.rs  freq.rs  map.rs  merge.rs  merge_parquet.rs  mod.rs  pca.rs  process.rs  process_mpi.rs  signif.rs  subset.rs  triage.rs
rsx-core/src/io/: mod.rs  seq_reader.rs  table_io.rs
rsx-core/src/source/: arrow_source.rs  estimator.rs  mod.rs  parquet_source.rs  tests.rs
rsx-core/tests/: test_pipeline.rs  test_precision.rs
rsx-python/: Cargo.toml  README.md  pyproject.toml  pyrsx.pyi
rsx-python/python/pyrsx/: __init__.py  _adapters.py  cli.py  plot.py
rsx-python/python/pyrsx/api/: markers.py  params.py  results.py
rsx-python/src/: lib.rs
rsx-python/tests/: test_marker_table_from_arrow.py  test_pyrsx.py
scripts/: pixi.toml  prepare_python_build.py
scripts/sollya/: README.org  erfc_coefficients.txt  erfc_direct.sollya  erfc_direct_coefficients.txt  erfc_minimax.sollya  patch_coefficients.py
scripts/sympy/: chi2_cdf_derivation.py  sparse_median_proof.py  tucker_covariance_proof.py
(+149 files in other folders)
