[workspace]
members = ["radsex-core", "rsx-cli", "rsx-python"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/HaoZeke/rsx-rs"

[profile.release]
lto = "thin"
codegen-units = 1

# cargo-dist builds (cross-platform, no -C target-cpu=native)
[profile.dist]
inherits = "release"
