[package]
name = "rsx-cli"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Rust CLI for RAD-seq sex-determination marker analysis (RADSex-compatible)"
repository = "https://github.com/HaoZeke/rsx-rs"

[[bin]]
name = "rsx"
path = "src/main.rs"

[features]
default = ["map"]
map = ["radsex-core/map"]
mpi = ["radsex-core/mpi"]
parquet-io = ["radsex-core/parquet-io"]

[dependencies]
radsex-core = { path = "../radsex-core", version = "0.2.3", features = ["parallel"] }
clap = { version = "4", features = ["derive", "cargo"] }
env_logger = "0.11"
log = "0.4"
