[package]
name = "pyrsx"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Python bindings for rsx: RAD-seq sex determination toolkit"
repository = "https://github.com/HaoZeke/rsx-rs"

[lib]
name = "pyrsx"
crate-type = ["cdylib"]

[dependencies]
rsx-core = { path = "../rsx-core", features = ["parallel"] }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }

# DLPack (via the user's dlpk crate) for direct, zero-copy tensor/array production
# to Python (numpy.from_dlpack, torch.from_dlpack, jax, etc.).
# This is the preferred path for eliminating temp files in the high-level API.
dlpk = { path = "../<path>", features = ["pyo3", "ndarray"] }

# Optional: Arrow/Parquet still available for rich tabular outputs if needed later
# arrow-array = "54"
# parquet = { version = "54", features = ["arrow"] }
