[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyrsx"
version = "0.2.2"
description = "Python bindings for rsx: high-performance RAD-seq sex determination toolkit"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Rohit Goswami", email = "rgoswami@ieee.org"}]
requires-python = ">=3.9"
dependencies = ["click>=8", "narwhals>=1.0", "pyarrow>=14"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
plot = ["plotnine>=0.12"]

[project.urls]
Homepage = "https://github.com/HaoZeke/rsx-rs"
Repository = "https://github.com/HaoZeke/rsx-rs"
Documentation = "https://rsx.rgoswami.me"

[project.scripts]
pyrsx = "pyrsx.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
